Spark 2.1 working in DC/OS